# maxentropy

./: .gitattributes  .gitignore  Fitting large maximum entropy models - simulated ... Berger machine translation example.ipynb  Fitting maximum entropy models - Berger machine translation example.ipynb  Handwritten postcode recognition.ipynb  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  __init__.py  info.py  maxentropy.py  maxentutils.py  pyproject.toml  setup.cfg  setup.py  version.py
docs/: Documentation.md
examples/: berger_example.py  berger_example_simulated.py  bergerexample.py  bergerexamplesimulated.py  conditional_example1.py  conditional_example2.py  conditionalexample1.py  conditionalexample2.py  loaded_die_example.py
examples_scipy/: README.md  berger_example.py  loaded_die_example.py
maxentropy/: __init__.py  _version.py  base.py  basemodel.py  bigmodel.py  classifier.py  conditionalmodel.py  core.py  density.py  maxentutils.py  model.py  mytest.py  oldutils.py  skmaxent.py  utils.py
maxentropy/scipy/: __init__.py  basemodel.py  conditionalmodel.py  maxentropy.py  maxentutils.py  model.py  utils.py
notebooks/: API Design for sklearn rewrite of maxentropy.ipynb  Berger machine translation example.ipynb  Examples of relative entropy min improving a density model.ipynb  Fitting large maximum entropy models - simulated ... Berger machine translation example.ipynb  Fitting maximum entropy models - Berger machine translation example.ipynb  Fitting maximum entropy models - Kangaroos example.ipynb  Fitting truncated Gaussians.ipynb  Handwritten postcode recognition - getting there, not quite finished.ipynb  Handwritten postcode recognition.ipynb  Ideas - improving a classification model.ipynb  Kangaroos example.ipynb  Loaded die example - skmaxent.ipynb  Loaded die example.ipynb  Maximum entropy - loaded die example.ipynb  Multi-class classification.ipynb  Representing prior knowledge - postcodes.ipynb  Truncated Gaussians.ipynb  Unfinished - maximum entropy derivation of common distributions.ipynb  scikit-learn and maxentropy experiments.ipynb
src/maxentropy/: __init__.py  base.py  classifier.py  density.py  (+1 more)
tests/: broken_test_bigmodel.py  test_berger.py  test_generative_bayes_classifier.py  test_loaded_die.py  test_maxentropy.py  test_sample_utils.py
