[project]
name = "maxentropy"
version = "0.6.0-dev"
description = "Maximum entropy and minimum divergence models in Python"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Ed Schofield", email = "ed@pythoncharmers.com" }
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.19.5",
    "scikit-learn>=0.24.2",
    "scipy>=1.5.4",
]

classifiers = [
    'Development Status :: 4 - Beta',
                 'Intended Audience :: Developers',
                 'Intended Audience :: Science/Research',
                 'License :: OSI Approved :: BSD License',
                 'Operating System :: Microsoft :: Windows',
                 'Operating System :: POSIX',
                 'Operating System :: Unix',
                 'Operating System :: MacOS',
                 'Programming Language :: Python :: 3',
                 'Topic :: Software Development',
                 'Topic :: Scientific/Engineering'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.3.1",
    "pytest>=7.0.1",
]
